// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentRow shows a Comment when itemType is comment 1`] = `
<TouchableOpacity
  onPress={[Function]}
>
  <View>
    <Comment
      comment={
        {
          "post": {
            "id": 2,
          },
        }
      }
      displayPostTitle={true}
      onPress={[Function]}
    />
  </View>
</TouchableOpacity>
`;

exports[`ContentRow shows a PostCard when itemType is post 1`] = `
<TouchableOpacity
  onPress={[Function]}
>
  <View>
    <PostCard
      post={
        {
          "id": 2,
        }
      }
      respondToEvent={[Function]}
      showGroups={true}
    />
  </View>
</TouchableOpacity>
`;

exports[`FeedTab matches the last snapshot 1`] = `
<TouchableOpacity
  onPress={[Function]}
>
  <Text>
    Posts
  </Text>
</TouchableOpacity>
`;

exports[`MemberProfile matches the last snapshot 1`] = `
<View>
  <FlatList
    ListFooterComponent={
      <FooterComponent
        pending={true}
      />
    }
    ListHeaderComponent={
      <HeaderComponent
        choice="Comments"
        header={
          <Text>
            header
          </Text>
        }
        setChoice={[Function]}
      />
    }
    contentContainerStyle={
      {
        "backgroundColor": "white",
      }
    }
    data={
      [
        {
          "id": 1,
        },
        {
          "id": 2,
        },
        {
          "id": 3,
        },
      ]
    }
    keyExtractor={[Function]}
    onEndReached={[Function]}
    renderItem={[Function]}
  />
</View>
`;
